// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ifEnd instruction compiler > ends a conditional block with multiple results 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
  ],
  "byteCode": [
    11,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "int",
    },
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "float",
    },
  ],
}
`;

exports[`ifEnd instruction compiler > ends a conditional block with result 1`] = `
{
  "blockStack": [
    {
      "blockType": 0,
      "expectedResultTypes": [],
    },
  ],
  "byteCode": [
    11,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "int",
    },
  ],
}
`;
